--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Layout"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".TableActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".LinearActivity"
+            android:exported="true">
+
+        </activity>
+        <activity android:name=".FrameActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+
 
             <meta-data
                 android:name="android.app.lib_name"
